# mx

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mx/: __init__.py  funcs.py
src/mx82/: funcs.py
tests/: test_funcs.py
