[project]
name = "mx82"
version = "0.1.1"
description = "my extensions: reusable functions for scientific computing"
authors = [
    {name = "Lox Nez Monsta",email = "magpylib@gmail.com"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)",
]

[[tool.poetry.packages]]
include = "mx"
from = "src"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/OrtnerMichael/mx"
"Source" = "https://github.com/OrtnerMichael/mx"
